--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "expo": "^25.0.0",
     "react": "^16.2.0",
+    "react-compose": "^2.0.0",
     "react-dom": "^16.2.0",
     "react-native": "0.52.0",
     "react-native-web": "^0.5.1",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "styled-components": "^3.2.5"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
